<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools">

    <item
        android:id="@+id/menu_star"
        android:icon="@drawable/rating_not_important"
        android:title="@string/menu_star"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction"/>
    <item
        android:id="@+id/menu_share"
        android:icon="@drawable/social_share"
        android:title="@string/menu_share"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction"/>
    <item
        android:id="@+id/menu_full_screen"
        android:icon="@drawable/full_screen"
        android:title="@string/menu_full_screen"
        app:showAsAction="never"
        tools:ignore="AlwaysShowAction"/>
    <item
        android:id="@+id/menu_copy_clipboard"
        android:icon="@drawable/content_copy"
        android:title="@string/menu_copy_clipboard"/>
    <item
        android:id="@+id/menu_mark_as_unread"
        android:title="@string/menu_mark_as_unread"/>
    <item
        android:id="@+id/menu_mark_as_favorite"
        android:icon="@drawable/rating_important"
        android:title="@string/menu_mark_as_favorite"/>
    <item
        android:id="@+id/menu_mark_as_unfavorite"
        android:icon="@drawable/rating_not_important"
        android:title="@string/menu_mark_as_unfavorite"/>
    <item
        android:id="@+id/menu_font_bold"
        android:title="@string/menu_font_bold"/>
    <item
        android:id="@+id/menu_reload_full_text"
        android:icon="@drawable/refresh"
        android:title="@string/menu_reload_full_text"/>
    <item
        android:id="@+id/menu_load_all_images"
        android:title="@string/menu_load_all_images"/>
    <item
        android:id="@+id/menu_cancel_refresh"
        android:icon="@drawable/ic_action_cancel"
        app:showAsAction="withText"
        android:title="@string/menu_cancel_refresh"/>
</menu>