<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

    <include layout="@layout/view_toolbar"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/button_layout"
        android:layout_below="@+id/toolbar"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:text="@string/google_news_indicator"
                android:textAppearance="?android:attr/textAppearanceMedium"/>

            <CheckBox
                android:id="@+id/cb_top_stories"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/google_news_top_stories"/>

            <CheckBox
                android:id="@+id/cb_world"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/google_news_world"/>

            <CheckBox
                android:id="@+id/cb_business"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/google_news_business"/>

            <CheckBox
                android:id="@+id/cb_technology"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/google_news_technology"/>

            <CheckBox
                android:id="@+id/cb_entertainment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/google_news_entertainment"/>

            <CheckBox
                android:id="@+id/cb_sports"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/google_news_sports"/>

            <CheckBox
                android:id="@+id/cb_science"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/google_news_science"/>

            <CheckBox
                android:id="@+id/cb_health"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/google_news_health"/>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/button_layout"
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:onClick="onClickCancel"
            android:text="@android:string/cancel"/>

        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:onClick="onClickOk"
            android:text="@android:string/ok"/>
    </LinearLayout>

</RelativeLayout>