<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <RadioButton
            android:id="@+id/acceptRadio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/accept"
            android:textColor="#669900"/>

        <RadioButton
            android:id="@+id/rejectRadio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/reject"
            android:textColor="#CC0000"/>
    </RadioGroup>

    <EditText
        android:id="@+id/filterText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <requestFocus/>
    </EditText>

    <CheckBox
        android:id="@+id/regexCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/filter_is_regex"/>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <RadioButton
            android:id="@+id/applyTitleRadio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/filter_apply_to_title"/>

        <RadioButton
            android:id="@+id/applyContentRadio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filter_apply_to_content"/>
    </RadioGroup>

</LinearLayout>