<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools">

    <item
        android:id="@+id/menu_refresh"
        android:icon="@drawable/refresh"
        android:title="@string/menu_refresh"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction"/>
    <item
        android:id="@+id/menu_search"
        android:icon="@drawable/action_search"
        android:title="@android:string/search_go"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction" />
    <item
        android:id="@+id/menu_all_read"
        android:icon="@drawable/read_all"
        android:title="@string/menu_all_read"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction"/>
    <item
        android:id="@+id/menu_share_starred"
        android:icon="@drawable/social_share"
        android:title="@string/context_menu_share_starred"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction" />
    <item
        android:id="@+id/menu_stop_search"
        android:icon="@drawable/ic_action_cancel_white"
        android:title="@android:string/cancel"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction" />

</menu>